<resources>
    <string name="app_name">MexicoLoan</string>
    <string name="welcome_tip">提供专业的无抵押贷款服务</string>
    <string name="re_get">重新获取</string>
    <string name="get_code">发送验证码</string>
    <string name="input_phone">输入手机号</string>
    <string name="bind_phone_tip">为了您的账户安全 请绑定手机号</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="phone">电话号</string>
    <string name="code">验证码</string>
    <string name="input_code_error">验证码输入有误！</string>
    <string name="pls_input_phone">请输入手机号</string>
    <string name="login_success">登录成功</string>
    <string name="loan">借款</string>
    <string name="user">个人</string>
    <string name="quit_app">再次按下后退按钮退出</string>
    <string name="loan_now">立即贷款</string>
    <string name="repay_date">借款期限：%s天</string>
    <string name="exit_app">退出登录</string>
    <string name="about_us">关于我们</string>
    <string name="call_us">联系我们</string>
    <string name="money_caed">银行卡</string>
    <string name="user_info">个人信息</string>
    <string name="my_loan">我的贷款</string>
    <string name="confirm_exit_app">确定要退出登录吗？</string>
    <string name="upload_id_tip">上传身份证图片（INE/IFE）</string>
    <string name="id_tip_just">您INE/IFE的正面</string>
    <string name="id_tip_counter">您INE/IFE的反面</string>
    <string name="gender">性别</string>
    <string name="birthday">出生年月</string>
    <string name="name">名字</string>
    <string name="surname_m">母亲的姓</string>
    <string name="surname">姓</string>
    <string name="user_info_id">身份信息</string>
    <string name="please_select">请选择</string>
    <string name="next_step">下一步</string>
    <string name="job">职务</string>
    <string name="job_type">职业类型</string>
    <string name="industry">所属行业</string>
    <string name="salary_range">薪资范围</string>
    <string name="source_income">收入来源</string>
    <string name="comp_name">公司名称</string>
    <string name="state">州</string>
    <string name="detail_address">详细地址</string>
    <string name="comp_phone">公司电话</string>
    <string name="work_info">工作信息</string>
    <string name="education_level">教育程度</string>
    <string name="marital_status">婚姻状况</string>
    <string name="children_number">孩子数量</string>
    <string name="home_type">居住类型</string>
    <string name="postal_code">邮政编码</string>
    <string name="location">位置</string>
    <string name="contact_info">联系人信息</string>
    <string name="first_contact">第一联系人</string>
    <string name="relation">关系</string>
    <string name="contact_name">联系人姓名</string>
    <string name="contact_phone">联系人电话</string>
    <string name="start">开始</string>
    <string name="face_tip">请确保您没有带戴帽子或类似物品遮住脸，确保光线充足。</string>
    <string name="bank">银行</string>
    <string name="bank_code">账号</string>
    <string name="bank_code_tip">确认账户的16位数字是正确的</string>
    <string name="submit">提交</string>
    <string name="clabe_code">CLABE代码</string>
    <string name="clabe_tip">输入以058开头的CLABE</string>
    <string name="bank_tip">输入16位数字卡号</string>
    <string name="curr">当前</string>
    <string name="history">历史</string>
    <string name="not_order">暂无订单</string>
    <string name="loan_money">贷款金额</string>
    <string name="amount">到账金额</string>
    <string name="review_tip">您提交的贷款申请正在审核中.请注意通知，按时还款可提高信用额度</string>
    <string name="loan_amount">借款金额</string>
    <string name="pay_fee">支付费用</string>
    <string name="fees_service">技术服务费</string>
    <string name="audit_fee">审核咨询费</string>
    <string name="loan_time">贷款期限：%s天</string>
    <string name="app_time">申请时间</string>
    <string name="interest">利息</string>
    <string name="review_error_tip">您提交的贷款申请暂不符合我们的审核条件，请保持良好的信用，七天后可再次申请。</string>
    <string name="repay_tip">您的贷款已经到账，请留意还款时间</string>
    <string name="late_fee">滞纳金</string>
    <string name="pen_interset">罚息</string>
    <string name="over_tip">您的贷款已逾期，请尽快还款避免产生额外费用</string>
    <string name="review">审核中</string>
    <string name="rejected">审核失败</string>
    <string name="repay">待还款</string>
    <string name="over">已逾期</string>
    <string name="pay_now">立即付款</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="submit_ok">提交成功</string>
    <string name="not_pp">缺少必要权限无法运行，请前往设置开启！</string>
    <string name="two_contact">第二联系人</string>
    <string name="repay_sign">还款标志：</string>
    <string name="account_name">账户名</string>
    <string name="repay_submit_success">还款提交成功</string>
    <string name="all_pay">全部还款</string>
    <string name="sub_pay">展期还款</string>
    <string name="refuse">审核拒绝</string>
    <string name="cancel">已取消</string>
    <string name="settle">已结清</string>
    <string name="face_detection">人脸识别</string>
    <string name="sub_end_time">展期结束时间</string>
    <string name="sub_start_time">展期开始时间</string>
    <string name="upload_repay_tip">上传还款凭证</string>
    <string name="input_code_tip">输入CLABE代码或tarjeta de débito账号</string>
    <string name="select_bank_account">请选择开户银行</string>
    <string name="select_bank_number">请填写银行账号</string>
    <string name="read_confirm">我已阅读并同意</string>
    <string name="pp">《隐私协议》</string>
    <string name="you_wate">您想借</string>
    <string name="max_money">最高可借金额</string>
    <string name="order_detail">订单详情</string>
    <string name="plese_input">请输入</string>
    <string name="confirm_order">确认订单</string>
    <string name="pay">还款</string>
    <string name="pp_not_check">请勾选隐私政策</string>

</resources>