<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.confirm.ConfirmActivity">



    <include layout="@layout/layout_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:layout_margin="18dp"
        android:padding="18dp"
        android:background="@mipmap/img_card_bg">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_b3ff"
            android:text="@string/loan_money"
            android:textSize="16dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_b3ff"
            android:text="@string/loan_money"
            android:textSize="16dp"

            />


        <TextView
            android:id="@+id/tv_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="$xxxx"
            android:layout_marginTop="30dp"
            android:textSize="28dp"

            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_ff32"
            android:textStyle="bold"
            android:text="@string/loan_time"
            android:textSize="16dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"

            />






    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_ff0d"
        android:layout_marginLeft="18dp"
        android:text="订单详情"
        android:textStyle="bold"
        />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="18dp"

        app:cardCornerRadius="18dp"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="18dp"
            android:layout_height="match_parent">

            <com.neutron.mexicoloan.ui.view.CertificationItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tv_left_text="@string/fees_service"
                app:tv_right_text="0.2%"
                app:c_view_style="show"
               />
            <com.neutron.mexicoloan.ui.view.CertificationItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tv_left_text="@string/audit_fee"
                app:tv_right_text="0.2%"
                app:c_view_style="show"
                />

            <com.neutron.mexicoloan.ui.view.CertificationItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tv_left_text="@string/pay_fee"
                app:tv_right_text="0.2%"
                app:c_view_style="show"
                app:is_show_line="false"
                />



        </LinearLayout>



    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_pink_btn"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="32dp"
            android:text="@string/dialog_ok"
            android:layout_centerInParent="true"
            android:textSize="20dp"/>



    </RelativeLayout>


</LinearLayout>